# mdbtools

./: .cvsignore  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  CHANGELOG.md  ChangeLog  HACKERS  HACKING  HACKING.md  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  TODO.md  acinclude.m4  aclocal.m4  appveyor.yml  autogen.sh  config.cache  config.guess  config.status  configure  configure.ac  configure.in  gnome-doc-utils.make  libmdb.pc.in  libmdbsql.pc.in  mdbtools.spec  mdbtools.spec.in  mkinstalldirs  omf.make  test_script.sh  test_sql.sh
.github/workflows/: build.yml  fuzz.yml
api_docx/: DoxygenLayout.xml  NEWS.md  build_docs.sh  custom.css  custom.css.map  custom.scss  doxygen.conf  pre_build.py
config/: config.sub  mkinstalldirs
contribute/vstudio/: compile_run.txt  mdbtools.vcxproj  mdbtools_vs2010.sln  prdata.vcxproj
doc/: .cvsignore  Makefile.am  faq.html  gmdb2.txt  install.sgml  mdb-array.txt  mdb-count.txt  mdb-export.txt  mdb-header.txt  mdb-hexdump.txt  mdb-import.txt  mdb-json.txt  mdb-parsecsv.txt  mdb-prop.txt  mdb-queries.txt  mdb-schema.txt  mdb-sql.txt  mdb-tables.txt  mdb-ver.txt  txt2man
doc/reference/libmdb/: Makefile.am  libmdb-docs.sgml  libmdb-sections.txt
include/: .cvsignore  Makefile  Makefile.am  Makefile.in  mdbfakeglib.h  mdbodbc.h  mdbprivate.h  mdbsql.h  mdbtools.h  mdbtools.h.in  mdbver.h.in
m4/: ccalias.m4  gnome-doc-utils.m4  iconv.m4  readline.m4
src/: Makefile  Makefile.am  Makefile.in  config.h.in  configure  configure.in
src/extras/: .cvsignore  Makefile  Makefile.am  Makefile.in  dump.c  mdb-dump.c  mdbsupport.c  mdbsupport.h
src/fuzz/: Makefile.am  fuzz_mdb.c
src/gmdb/: .cvsignore  Makefile.am  code.xpm  debug.c  debug.xpm  file.c  form.c  gmdb.h  gtkhlist.c  gtkhlist.h  info.c  macro.c  main.c  module.c  pk.xpm  query.c  report.c  sql.c  table.c  table_data.c  table_def.c  table_export.c  util.c
src/gmdb2/: .cvsignore  Makefile.am  debug.c  file.c  form.c  gmdb.h  info.c  logo.xpm  macro.c  macro_big.xpm  main2.c  module.c  prefs.c  query.c  query_big.xpm  report.c  report_big.xpm  schema.c  sql.c  table.c  table.xpm  table_big.xpm  table_data.c  table_def.c  table_export.c  util.c
src/gmdb2/gladefiles/: .cvsignore  Makefile.am  gmdb-debug.glade  gmdb-export.glade  gmdb-prefs.glade  gmdb-props.glade  gmdb-schema.glade  gmdb-sql-file.glade  gmdb-sql.glade  gmdb-tabledef.glade  gmdb.glade
src/gmdb2/help/: Makefile.am  gmdb.omf.in
src/gmdb2/help/C/: .cvsignore  Makefile.am  gmdb-C.omf  gmdb.xml  legal.xml  xmldocs.make
src/gmdb2/pixmaps/: Makefile.am  form_big.xpm  forms.xpm  macros.xpm  module_big.xpm  query.xpm  reports.xpm
src/include/: Makefile.in  mdbtools.h
src/libmdb/: Makefile  Makefile.am  Makefile.in  ReadMe.txt  backend.c  catalog.c  data.c  dump.c  fakeglib.c  file.c  iconv.c  index.c  kkd.c  libmdb.map  libmdb.pro  libmdb.sln  libmdb.vcxproj  libmdb.vcxproj.filters  like.c  map.c  mem.c  money.c  options.c  props.c  rc4.c  sargs.c  stats.c  table.c  version.c  worktable.c  write.c
src/odbc/: .cvsignore  Makefile  Makefile.am  Makefile.in  connectparams.c  connectparams.h  getproperties.c  libmdbodbc.map  mdbodbc.h  odbc.c  odbcw.c  unittest.c
src/sql/: .cvsignore  Makefile  Makefile.am  Makefile.in  Makefile.orig  lexer.c  lexer.l  libmdbsql.map  main.c  mdbsql.c  mdbsql.h  parser.c  parser.h  parser.y  sql.l
src/util/: .cvsignore  Makefile  Makefile.am  Makefile.in  base64.h  header.c  mdb-array.c  mdb-check.c  mdb-count.c  mdb-export.c  mdb-exportjson.c  mdb-header.c  mdb-import.c  mdb-json.c  mdb-parsecsv.c  mdb-prop.c  mdb-queries-all  mdb-queries.c  mdb-schema.c  mdb-sql.c  mdb-tables.c  mdb-ver.c  mdbtools.bash-completion  parsecsv.c  prcat.c  prdata.c  prdump.c  prfreemap.c  prindex.c  prkkd.c  prole.c  prtable.c  sargtest.c  schema.c  tables.c  updrow.c
src/util/bash-completion/: Makefile.am  mdb-count  mdb-export  mdb-hexdump  mdb-import  mdb-json  mdb-parsecsv  mdb-prop  mdb-queries  mdb-schema  mdb-sql  mdb-tables  mdb-ver
test/data/: ASampleDatabase.accdb  nwind.mdb
test/sql/: nwind.sql
