dnl Process this file with autoconf to produce a configure script.
AC_INIT(extras/dump.c)

AC_PROG_CC(gcc)
dnl Checks for programs.
AC_PROG_MAKE_SET

dnl Checks for libraries.
dnl Replace `main' with a function in -libs:
AC_CHECK_LIB(ibs, main)
dnl Replace `main' with a function in -lmdb:
AC_CHECK_LIB(mdb, mdb_free_handle)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

OLDCFLAGS="$CFLAGS"
CFLAGS=""
AC_C_BIGENDIAN
if test $ac_cv_c_bigendian = yes; then OLDCFLAGS="$OLDCFLAGS -DHW_BIG_ENDIAN";
else OLDCFLAGS="$OLDCFLAGS -DHW_LITTLE_ENDIAN"; fi
CFLAGS=$OLDCFLAGS

dnl Checks for library functions.

AC_OUTPUT(util/Makefile extras/Makefile Makefile libmdb/Makefile include/Makefile)
